--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<div style="display: flex; align-items: center; margin-bottom: 2em;">
 									<img src="images/Sergio.jpg" alt="Team working together" style="width: 40%; margin-right: 2em;" />
 									<p style="flex: 1;">
-									Sergio Augusto.
+									Sergio Augusto
 									</p>
 								</div>
 
@@ -97,7 +97,7 @@
 								<div style="display: flex; align-items: center; margin-bottom: 2em;">
 									<img src="images/Berna.jpg" alt="Athlete on a tennis court" style="width: 40%; margin-right: 2em;" />
 									<p style="flex: 1;">
-									Bernardo Giuseppe.
+									Bernardo Giuseppe
 									</p>
 								</div>
 
@@ -105,7 +105,7 @@
 								<div style="display: flex; align-items: center; margin-bottom: 2em;">
 									<img src="images/Carlo.jpg" alt="Smart device close-up" style="width: 40%; margin-right: 2em;" />
 									<p style="flex: 1;">
-									Carlo Alberto.
+									Carlo Alberto
 									</p>
 								</div>
 							</article>
