--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+						<!--<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -139,7 +139,34 @@
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
+							</article> -->
+
+						<!-- NEW CONTACT -->
+							<article id="contact">
+								<h2 class="major">Contact</h2>
+
+								<div class="contact-box">
+									<h3>Email</h3>
+									<p><a href="mailto:yourname@example.com">angelini.sebeca@gmail.com</a></p>
+								</div>
+
+								<div class="contact-box">
+									<h3>Address</h3>
+									<p>Via Assisana, 11/BIS, 06126 <br>Perugia, Italy</p>
+								</div>
+
+								<div class="contact-box">
+									<h3>Follow Us</h3>
+									<ul class="icons">
+									<li><a href="#" class="icon brands fa-x-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									</ul>
+								</div>
 							</article>
+
 
 						<!-- Elements -->
 							<article id="elements">
